[package]
name = "splint"
version = "0.1.0"
authors = ["softprops <d.tangren@gmail.com>"]
description = "ensures structures with a well defined shape stay in place"
edition = "2018"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glob = "0.3"
lazy_static = "1.4"
structopt = "0.3"
serde = { version = "1.0", features = ["derive"]}
reqwest = "0.9"
jsonschema-valid = "0.2"
serde_json = "1.0"
serde_yaml = "0.8"