[package]
name = "splint"
version = "0.1.0"
authors = ["softprops <d.tangren@gmail.com>"]
description = "ensures structures with a well defined shape stay in place"
edition = "2018"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glob = "0.3"
jsonschema-valid = "0.2"
lazy_static = "1.4"
regex = "1.3"
reqwest = { version = "0.9", default-features = false, features = ["rustls-tls"]}
serde = { version = "1.0", features = ["derive"]}
serde_json = "1.0"
serde_yaml = "0.8"
structopt = "0.3"